# fts-elasticsearch

./: .gitignore  AUTHORS  COPYING  Makefile.am  README.md  antigen.sh  configure.ac  dummy-config.h.in  elastic-schema.json  elastic6-schema.json  index-template-schema.json
m4/: dovecot.m4
src/: Makefile.am  Makefile.in  elastic-connection.c  elastic-connection.h  elasticsearch-conn.c  elasticsearch-conn.h  fts-backend-elastic.c  fts-backend-elasticsearch.c  fts-elastic-plugin.c  fts-elastic-plugin.h  fts-elasticsearch-plugin.c  fts-elasticsearch-plugin.h
tests/: imap_test.py
